Closed Bug 1578690 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::MozPromise<T>::ThenValueBase::AssertIsDead]

Categories

(Core :: Networking, defect)

71 Branch
Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox69 --- unaffected
firefox70 --- unaffected
firefox71 --- fixed

People

(Reporter: calixte, Assigned: mattwoodrow)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-a61f777c-1a77-4e43-8ec9-a2e3d0190903.

Top 10 frames of crashing thread:

0 xul.dll void mozilla::MozPromise<DiskInfo, nsresult, 0>::ThenValueBase::AssertIsDead xpcom/threads/MozPromise.h:435
1 xul.dll void mozilla::MozPromise<mozilla::dom::ClientSourceParent*, nsresult, 0>::AssertIsDead xpcom/threads/MozPromise.h:966
2 xul.dll void mozilla::MozPromise<mozilla::dom::ClientSourceParent*, nsresult, 0>::~MozPromise xpcom/threads/MozPromise.h:1007
3 xul.dll static void mozilla::MozPromise<mozilla::dom::ClientSourceParent*, nsresult, 0>::Private::~Private xpcom/threads/MozPromise.h:246
4 xul.dll class RefPtr<mozilla::MozPromise<mozilla::dom::ClientSourceParent*, nsresult, 0> > mozilla::dom::ClientHandleParent::EnsureSource dom/clients/manager/ClientHandleParent.cpp:82
5 xul.dll void mozilla::dom::ClientHandleOpParent::Init dom/clients/manager/ClientHandleOpParent.cpp:28
6 xul.dll class mozilla::ipc::IPCResult mozilla::dom::ClientHandleParent::RecvPClientHandleOpConstructor dom/clients/manager/ClientHandleParent.cpp:52
7 xul.dll mozilla::dom::PClientHandleParent::OnMessageReceived ipc/ipdl/PClientHandleParent.cpp:262
8 xul.dll mozilla::ipc::PBackgroundParent::OnMessageReceived ipc/ipdl/PBackgroundParent.cpp:3588
9 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2107

There are 4 crashes (from 3 installations) in nightly 71 with buildid 20190903094847. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1556489.

[1] https://hg.mozilla.org/mozilla-central/rev?node=6125bb02952a

Flags: needinfo?(matt.woodrow)

Nhi could we get this bug triaged please? Thanks

Flags: needinfo?(nhnguyen)

ni Valentin to triage

Flags: needinfo?(nhnguyen) → needinfo?(valentin.gosu)

The code for ClientHandleParent::EnsureSource was touched in bug 1556489.
Matt, do you have time to take a look?

Flags: needinfo?(valentin.gosu)

Matt or Jean-Yves would be appropriate to look into this.

Flags: needinfo?(jyavenard)
Assignee: nobody → matt.woodrow
Flags: needinfo?(jyavenard)
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/dd31644a04d5
Only create a new promise in EnsureSource if we didn't already have one. r=perry
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Flags: needinfo?(matt.woodrow)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: