Bug 1578690 - Only create a new promise in EnsureSource if we didn't already have one. r=perry

Differential Revision: https://phabricator.services.mozilla.com/D47672